--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-	"name" : "hello-uniapp",
-	"appid" : "",
+	"name" : "zzjz",
+	"appid" : "__UNI__E01CCE1",
 	"description": "",
 	"versionName": "1.0.0",
 	"versionCode": "100",
